1998-09-03  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* tkobjc.m (initTkObjc): Define fmtx Tcl procedure.

	* Histogram.m ([Histogram -setXaxisMin:max:step:precision:]):
	New method.
	([Histogram -setXaxisMin:max:step:]): Use it with a default of 3
	for precision.

	* Widget.[hm]: Remove static typing from arguments to -setParent:,
	+createParent: and from return values of -getParent and -getTopLevel.

1998-08-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (CURRENT): Increment.  Swarm 1.3 released.

1998-08-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ClassDisplayHideButton.m (tkobjc_packForgetArmSuperAndResize): 
	Use XFREE instead of xfree.

	* RectangleNodeItem.m ([RectangleNodeItem -createItem]): Likewise.

	* Pixmap.m ([Pixmap -_loadPNG_]): Likewise.

	* OvalNodeItem.m ([OvalNodeItem -createItem]): Likewise.

1998-08-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Pixmap.m ([Pixmap +createBegin:]): Default directory to ./.
	([Pixmap -_loadPNG_]): Prepend directory to filename.

	* Pixmap.[hm]: Add setDirectory:. 

1998-08-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* internal.m (tkobjc_pixmap_update_raster): Don't augment
	raster palette if it has already been done for this pixmap.

	* win32dib.[ch] (dib_paletteIndexForObject): New function.

	* Pixmap.[hm] ([Pixmap +createBegin:], [Pixmap -setFile:],
	[Pixmap -setWidget:], [Pixmap -createEnd]):
	Remove +create:{widget,file} and provide setter methods.

	* win32dib.c (dib_copy): Don't update DIB color table.

	* internal.m (tkobjc_pixmap_update_raster): Remove raster palette
	update code.

	* Pixmap.m ([Pixmap -_loadPNG_:]): Remove num_palette and palette
	local variables (use ivars).
	([Pixmap -_loadPNG_:]): Simplified usage of tkobjc_pixmap_create.
	([Pixmap -setRaster:]): Call new tkobjc_pixmap_update_raster.

	* Pixmap.h (Pixmap): Add palette_size and palette ivars.

	* internal.[hm] (tkobjc_pixmap_create): Drop palette and palette_size